--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 0.6.0
  - Fixed @CustomMeasurement not working if no configuration is provided.
+ - Fixed GSON crashing ART on Marshmallow devices.
 
 0.5.0
  - First "stable" release after major restructuring from
